# sphinx-persistence

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/sphinx_persistence/: __init__.py
src/sphinx_persistence/static/: activity-persistence.js  book-exporter.js  data-manager.js  progress-checkboxes.js  teachbook-questions-persistence.js  thebe-code-persistence.js
